Update and fix json lib